src/algoritmia/AlgoritmiaParser.py
# Generated from C:/Users/Admin/Desktop/aaa/Algoritmia.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AlgoritmiaParser ( Parser ):

    grammarFileName = "Algoritmia.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'|:'", "':|'", "'<-'", "'<?>'", "'<w>'", 
                     "'(:)'", "'<:>'", "'if'", "'else'", "'while'", "'<'", 
                     "'8'", "'['", "']'", "'='", "'/='", "'>'", "'<='", 
                     "'>='", "'+'", "'-'", "'*'", "'/'", "'%'", "'('", "')'", 
                     "'#'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "STRING", "INT", "ID_MAYUS", 
                      "ID_MINUSCULA", "WS", "COMMENT" ]

    RULE_programa = 0
    RULE_procedimiento = 1
    RULE_parametros = 2
    RULE_instrucciones = 3
    RULE_instruccion = 4
    RULE_asignacion = 5
    RULE_lectura = 6
    RULE_escritura = 7
    RULE_escritura_item = 8
    RULE_reproduccion = 9
    RULE_condicional = 10
    RULE_while = 11
    RULE_llamada_proc = 12
    RULE_addlista = 13
    RULE_poplista = 14
    RULE_expr = 15
    RULE_comparacion = 16
    RULE_aritmetica = 17
    RULE_termino = 18
    RULE_factor = 19
    RULE_lista = 20
    RULE_elementos_lista = 21

    ruleNames =  [ "programa", "procedimiento", "parametros", "instrucciones", 
                   "instruccion", "asignacion", "lectura", "escritura", 
                   "escritura_item", "reproduccion", "condicional", "while", 
                   "llamada_proc", "addlista", "poplista", "expr", "comparacion", 
                   "aritmetica", "termino", "factor", "lista", "elementos_lista" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    STRING=30
    INT=31
    ID_MAYUS=32
    ID_MINUSCULA=33
    WS=34
    COMMENT=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(AlgoritmiaParser.EOF, 0)

        def procedimiento(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.ProcedimientoContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.ProcedimientoContext,i)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = AlgoritmiaParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 44
                self.procedimiento()
                self.state = 47 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==32):
                    break

            self.state = 49
            self.match(AlgoritmiaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcedimientoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_MAYUS(self):
            return self.getToken(AlgoritmiaParser.ID_MAYUS, 0)

        def instrucciones(self):
            return self.getTypedRuleContext(AlgoritmiaParser.InstruccionesContext,0)


        def parametros(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ParametrosContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_procedimiento

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcedimiento" ):
                listener.enterProcedimiento(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcedimiento" ):
                listener.exitProcedimiento(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedimiento" ):
                return visitor.visitProcedimiento(self)
            else:
                return visitor.visitChildren(self)




    def procedimiento(self):

        localctx = AlgoritmiaParser.ProcedimientoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_procedimiento)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(AlgoritmiaParser.ID_MAYUS)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==33:
                self.state = 52
                self.parametros()


            self.state = 55
            self.match(AlgoritmiaParser.T__0)
            self.state = 56
            self.instrucciones()
            self.state = 57
            self.match(AlgoritmiaParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametrosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_MINUSCULA(self, i:int=None):
            if i is None:
                return self.getTokens(AlgoritmiaParser.ID_MINUSCULA)
            else:
                return self.getToken(AlgoritmiaParser.ID_MINUSCULA, i)

        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_parametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametros" ):
                listener.enterParametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametros" ):
                listener.exitParametros(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametros" ):
                return visitor.visitParametros(self)
            else:
                return visitor.visitChildren(self)




    def parametros(self):

        localctx = AlgoritmiaParser.ParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_parametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 59
                self.match(AlgoritmiaParser.ID_MINUSCULA)
                self.state = 62 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==33):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruccion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.InstruccionContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.InstruccionContext,i)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_instrucciones

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstrucciones" ):
                listener.enterInstrucciones(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstrucciones" ):
                listener.exitInstrucciones(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstrucciones" ):
                return visitor.visitInstrucciones(self)
            else:
                return visitor.visitChildren(self)




    def instrucciones(self):

        localctx = AlgoritmiaParser.InstruccionesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_instrucciones)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 12884907504) != 0):
                self.state = 64
                self.instruccion()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self):
            return self.getTypedRuleContext(AlgoritmiaParser.AsignacionContext,0)


        def lectura(self):
            return self.getTypedRuleContext(AlgoritmiaParser.LecturaContext,0)


        def escritura(self):
            return self.getTypedRuleContext(AlgoritmiaParser.EscrituraContext,0)


        def condicional(self):
            return self.getTypedRuleContext(AlgoritmiaParser.CondicionalContext,0)


        def while_(self):
            return self.getTypedRuleContext(AlgoritmiaParser.WhileContext,0)


        def llamada_proc(self):
            return self.getTypedRuleContext(AlgoritmiaParser.Llamada_procContext,0)


        def reproduccion(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ReproduccionContext,0)


        def addlista(self):
            return self.getTypedRuleContext(AlgoritmiaParser.AddlistaContext,0)


        def poplista(self):
            return self.getTypedRuleContext(AlgoritmiaParser.PoplistaContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_instruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccion" ):
                listener.enterInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccion" ):
                listener.exitInstruccion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccion" ):
                return visitor.visitInstruccion(self)
            else:
                return visitor.visitChildren(self)




    def instruccion(self):

        localctx = AlgoritmiaParser.InstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_instruccion)
        try:
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.asignacion()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.lectura()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 72
                self.escritura()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 73
                self.condicional()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 74
                self.while_()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 75
                self.llamada_proc()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 76
                self.reproduccion()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 77
                self.addlista()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 78
                self.poplista()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_MINUSCULA(self):
            return self.getToken(AlgoritmiaParser.ID_MINUSCULA, 0)

        def expr(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = AlgoritmiaParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(AlgoritmiaParser.ID_MINUSCULA)
            self.state = 82
            self.match(AlgoritmiaParser.T__2)
            self.state = 83
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LecturaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_MINUSCULA(self):
            return self.getToken(AlgoritmiaParser.ID_MINUSCULA, 0)

        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_lectura

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLectura" ):
                listener.enterLectura(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLectura" ):
                listener.exitLectura(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLectura" ):
                return visitor.visitLectura(self)
            else:
                return visitor.visitChildren(self)




    def lectura(self):

        localctx = AlgoritmiaParser.LecturaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_lectura)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(AlgoritmiaParser.T__3)
            self.state = 86
            self.match(AlgoritmiaParser.ID_MINUSCULA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EscrituraContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def escritura_item(self):
            return self.getTypedRuleContext(AlgoritmiaParser.Escritura_itemContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_escritura

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEscritura" ):
                listener.enterEscritura(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEscritura" ):
                listener.exitEscritura(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEscritura" ):
                return visitor.visitEscritura(self)
            else:
                return visitor.visitChildren(self)




    def escritura(self):

        localctx = AlgoritmiaParser.EscrituraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_escritura)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(AlgoritmiaParser.T__4)
            self.state = 89
            self.escritura_item()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Escritura_itemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(AlgoritmiaParser.STRING, 0)

        def expr(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_escritura_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEscritura_item" ):
                listener.enterEscritura_item(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEscritura_item" ):
                listener.exitEscritura_item(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEscritura_item" ):
                return visitor.visitEscritura_item(self)
            else:
                return visitor.visitChildren(self)




    def escritura_item(self):

        localctx = AlgoritmiaParser.Escritura_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_escritura_item)
        try:
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [30]:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.match(AlgoritmiaParser.STRING)
                pass
            elif token in [21, 25, 27, 28, 31, 32, 33]:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.expr()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReproduccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_reproduccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReproduccion" ):
                listener.enterReproduccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReproduccion" ):
                listener.exitReproduccion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReproduccion" ):
                return visitor.visitReproduccion(self)
            else:
                return visitor.visitChildren(self)




    def reproduccion(self):

        localctx = AlgoritmiaParser.ReproduccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_reproduccion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            _la = self._input.LA(1)
            if not(_la==6 or _la==7):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 96
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,0)


        def instrucciones(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.InstruccionesContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.InstruccionesContext,i)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_condicional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicional" ):
                listener.enterCondicional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicional" ):
                listener.exitCondicional(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicional" ):
                return visitor.visitCondicional(self)
            else:
                return visitor.visitChildren(self)




    def condicional(self):

        localctx = AlgoritmiaParser.CondicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_condicional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(AlgoritmiaParser.T__7)
            self.state = 99
            self.expr()
            self.state = 100
            self.match(AlgoritmiaParser.T__0)
            self.state = 101
            self.instrucciones()
            self.state = 102
            self.match(AlgoritmiaParser.T__1)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 103
                self.match(AlgoritmiaParser.T__8)
                self.state = 104
                self.match(AlgoritmiaParser.T__0)
                self.state = 105
                self.instrucciones()
                self.state = 106
                self.match(AlgoritmiaParser.T__1)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,0)


        def instrucciones(self):
            return self.getTypedRuleContext(AlgoritmiaParser.InstruccionesContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_while

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)




    def while_(self):

        localctx = AlgoritmiaParser.WhileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_while)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(AlgoritmiaParser.T__9)
            self.state = 111
            self.expr()
            self.state = 112
            self.match(AlgoritmiaParser.T__0)
            self.state = 113
            self.instrucciones()
            self.state = 114
            self.match(AlgoritmiaParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Llamada_procContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_MAYUS(self):
            return self.getToken(AlgoritmiaParser.ID_MAYUS, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.ExprContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,i)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_llamada_proc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLlamada_proc" ):
                listener.enterLlamada_proc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLlamada_proc" ):
                listener.exitLlamada_proc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLlamada_proc" ):
                return visitor.visitLlamada_proc(self)
            else:
                return visitor.visitChildren(self)




    def llamada_proc(self):

        localctx = AlgoritmiaParser.Llamada_procContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_llamada_proc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(AlgoritmiaParser.ID_MAYUS)
            self.state = 120
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 117
                    self.expr() 
                self.state = 122
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddlistaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_MINUSCULA(self):
            return self.getToken(AlgoritmiaParser.ID_MINUSCULA, 0)

        def expr(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_addlista

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddlista" ):
                listener.enterAddlista(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddlista" ):
                listener.exitAddlista(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddlista" ):
                return visitor.visitAddlista(self)
            else:
                return visitor.visitChildren(self)




    def addlista(self):

        localctx = AlgoritmiaParser.AddlistaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_addlista)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(AlgoritmiaParser.ID_MINUSCULA)
            self.state = 124
            self.match(AlgoritmiaParser.T__10)
            self.state = 125
            self.match(AlgoritmiaParser.T__10)
            self.state = 126
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PoplistaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_MINUSCULA(self):
            return self.getToken(AlgoritmiaParser.ID_MINUSCULA, 0)

        def expr(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExprContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_poplista

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPoplista" ):
                listener.enterPoplista(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPoplista" ):
                listener.exitPoplista(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPoplista" ):
                return visitor.visitPoplista(self)
            else:
                return visitor.visitChildren(self)




    def poplista(self):

        localctx = AlgoritmiaParser.PoplistaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_poplista)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(AlgoritmiaParser.T__11)
            self.state = 129
            self.match(AlgoritmiaParser.T__10)
            self.state = 130
            self.match(AlgoritmiaParser.ID_MINUSCULA)
            self.state = 131
            self.match(AlgoritmiaParser.T__12)
            self.state = 132
            self.expr()
            self.state = 133
            self.match(AlgoritmiaParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comparacion(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ComparacionContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):
